@@ -273,8 +273,14 @@ namespace tgui
 
     bool ComboBox::setSelectedItem(const sf::String& itemName)
     {
+        const int previousSelectedItemIndex = m_listBox->getSelectedItemIndex();
+
         const bool ret = m_listBox->setSelectedItem(itemName);
         m_text.setString(m_listBox->getSelectedItem());
+
+        if (previousSelectedItemIndex != m_listBox->getSelectedItemIndex())
+            onItemSelect.emit(this, m_listBox->getSelectedItem(), m_listBox->getSelectedItemId());
+
         return ret;
     }
 
@@ -282,8 +288,14 @@ namespace tgui
 
     bool ComboBox::setSelectedItemById(const sf::String& id)
     {
+        const int previousSelectedItemIndex = m_listBox->getSelectedItemIndex();
+
         const bool ret = m_listBox->setSelectedItemById(id);
         m_text.setString(m_listBox->getSelectedItem());
+
+        if (previousSelectedItemIndex != m_listBox->getSelectedItemIndex())
+            onItemSelect.emit(this, m_listBox->getSelectedItem(), m_listBox->getSelectedItemId());
+
         return ret;
     }
 
@@ -291,8 +303,14 @@ namespace tgui
 
     bool ComboBox::setSelectedItemByIndex(std::size_t index)
     {
+        const int previousSelectedItemIndex = m_listBox->getSelectedItemIndex();
+
         const bool ret = m_listBox->setSelectedItemByIndex(index);
         m_text.setString(m_listBox->getSelectedItem());
+
+        if (previousSelectedItemIndex != m_listBox->getSelectedItemIndex())
+            onItemSelect.emit(this, m_listBox->getSelectedItem(), m_listBox->getSelectedItemId());
+
         return ret;
     }
 
@@ -560,6 +578,7 @@ namespace tgui
             {
                 m_listBox->setSelectedItemByIndex(static_cast<std::size_t>(m_listBox->getSelectedItemIndex() + 1));
                 m_text.setString(m_listBox->getSelectedItem());
+                onItemSelect.emit(this, m_listBox->getSelectedItem(), m_listBox->getSelectedItemId());
             }
         }
         else // You are scrolling up
@@ -569,6 +588,7 @@ namespace tgui
             {
                 m_listBox->setSelectedItemByIndex(static_cast<std::size_t>(m_listBox->getSelectedItemIndex() - 1));
                 m_text.setString(m_listBox->getSelectedItem());
+                onItemSelect.emit(this, m_listBox->getSelectedItem(), m_listBox->getSelectedItemId());
             }
         }
 
@@ -826,52 +846,60 @@ namespace tgui
 
     void ComboBox::showListBox()
     {
-        if (!m_listBox->isVisible() && getParent())
+        if (m_listBox->isVisible() || !getParent())
+            return;
+
+        m_previousSelectedItemIndex = m_listBox->getSelectedItemIndex();
+
+        m_listBox->setVisible(true);
+
+        // Find the GuiContainer that contains the combo box
+        Container* container = getParent();
+        while (container->getParent() != nullptr)
+            container = container->getParent();
+
+        ExpandDirection direction = m_expandDirection;
+        if (direction == ExpandDirection::Automatic)
         {
-            m_listBox->setVisible(true);
-
-            // Find the GuiContainer that contains the combo box
-            Container* container = getParent();
-            while (container->getParent() != nullptr)
-                container = container->getParent();
-
-            ExpandDirection direction = m_expandDirection;
-            if (direction == ExpandDirection::Automatic)
-            {
-                if ((getAbsolutePosition().y + getSize().y + m_listBox->getSize().y - m_bordersCached.getBottom() > container->getSize().y)
-                 && (getAbsolutePosition().y - m_listBox->getSize().y + m_bordersCached.getTop() > 0))
-                    direction = ExpandDirection::Up;
-                else
-                    direction = ExpandDirection::Down;
-            }
-
-            if (direction == ExpandDirection::Down)
-                m_listBox->setPosition({getAbsolutePosition().x, getAbsolutePosition().y + getSize().y - m_bordersCached.getBottom()});
-            else if (direction == ExpandDirection::Up)
-                m_listBox->setPosition({getAbsolutePosition().x, getAbsolutePosition().y - m_listBox->getSize().y + m_bordersCached.getTop()});
-
-            container->add(m_listBox, "#TGUI_INTERNAL$ComboBoxListBox#");
-            m_listBox->setFocused(true);
+            if ((getAbsolutePosition().y + getSize().y + m_listBox->getSize().y - m_bordersCached.getBottom() > container->getSize().y)
+             && (getAbsolutePosition().y - m_listBox->getSize().y + m_bordersCached.getTop() > 0))
+                direction = ExpandDirection::Up;
+            else
+                direction = ExpandDirection::Down;
         }
+
+        if (direction == ExpandDirection::Down)
+            m_listBox->setPosition({getAbsolutePosition().x, getAbsolutePosition().y + getSize().y - m_bordersCached.getBottom()});
+        else if (direction == ExpandDirection::Up)
+            m_listBox->setPosition({getAbsolutePosition().x, getAbsolutePosition().y - m_listBox->getSize().y + m_bordersCached.getTop()});
+
+        container->add(m_listBox, "#TGUI_INTERNAL$ComboBoxListBox#");
+        m_listBox->setFocused(true);
     }
 
     /////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 
     void ComboBox::hideListBox()
     {
-        // If the list was open then close it now
-        if (m_listBox->isVisible())
+        if (!m_listBox->isVisible())
+            return;
+
+        m_listBox->setVisible(false);
+        m_listBox->mouseNoLongerOnWidget();
+
+        // Find the GuiContainer in order to remove the ListBox from it
+        Widget* container = this;
+        while (container->getParent() != nullptr)
+            container = container->getParent();
+
+        if (container != this)
+            static_cast<Container*>(container)->remove(m_listBox);
+
+        const int selectedItemIndex = m_listBox->getSelectedItemIndex();
+        if (selectedItemIndex != m_previousSelectedItemIndex)
         {
-            m_listBox->setVisible(false);
-            m_listBox->mouseNoLongerOnWidget();
-
-            // Find the GuiContainer in order to remove the ListBox from it
-            Widget* container = this;
-            while (container->getParent() != nullptr)
-                container = container->getParent();
-
-            if (container != this)
-                static_cast<Container*>(container)->remove(m_listBox);
+            m_text.setString(m_listBox->getSelectedItem());
+            onItemSelect.emit(this, m_listBox->getSelectedItem(), m_listBox->getSelectedItemId());
         }
     }
 
@@ -880,11 +908,6 @@ namespace tgui
     void ComboBox::initListBox()
     {
         m_listBox->setVisible(false);
-
-        m_listBox->connect("ItemSelected", [this](){
-                                                m_text.setString(m_listBox->getSelectedItem());
-                                                onItemSelect.emit(this, m_listBox->getSelectedItem(), m_listBox->getSelectedItemId());
-                                            });
 
         m_listBox->connect("Unfocused", [this](){
                                                     if (!m_mouseHover)
